<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:text="@string/about"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="italic"
            android:textSize="18sp"
            android:text="@string/student_details"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/question1"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="italic"
            android:textSize="18sp"
            android:text="@string/q1_about_info"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/question2"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="italic"
            android:textSize="18sp"
            android:text="@string/q2_about_info"/>

    </LinearLayout>

</ScrollView>