<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnLaunchQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/question1"
        android:onClick="onClickLaunchQ1"/>

    <Button
        android:id="@+id/btnLaunchQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/question2"
        android:onClick="onClickLaunchQ2"/>

</LinearLayout>