<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gareth.example.com.opsc7312assignment2.Q1AddressFragment">

    <TableRow>
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/current_address"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvSuburb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/suburb"
            android:visibility="invisible"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/country"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/postcode"
            android:visibility="invisible"/>
    </TableRow>

</TableLayout>